--- a/config/database.yml
+++ b/config/database.yml
@@ -4,8 +4,9 @@ default: &default
   encoding: utf8
   pool: 5
   username: root
-  password:  
-  socket: /tmp/mysql.sock  
+  password: domoncas
+  socket: /var/run/mysqld/mysqld.sock
+ 
 
 
 development:
